# skeleton-ansible-role

./: .gitignore  .pre-commit-config.yaml  .travis.build.yml.j2  .travis.lint.yml.j2  .travis.use-me-to-build.yml.j2  .travis.yml  .travis.yml.j2  .yamllint.yml.j2  LICENSE  LICENSE.j2  README.md  README.md.j2  USAGE.md  pyproject.toml  requirements.txt  requirements.yml  requirements.yml.j2  tasks.yml.j2  tox.ini  tox.ini.j2
.github/workflows/: molecule.yml.j2
defaults/: main.yml.j2
docs/: README.md  README.rst
handlers/: main.yml
meta/: main.yml.j2  requirements.yml  requirements.yml.j2
molecule/all/: _create.yml  molecule.yml.j2
molecule/default/: Dockerfile.j2.j2  molecule.yml.j2
molecule/kvm/: build.yml.j2  molecule.yml.j2  prepare.yml.j2
molecule/libvirt/: molecule.yml.j2
molecule/podman/: Dockerfile.j2.j2  molecule.yml.j2
molecule/resources/playbooks/: converge.yml.j2  prepare.yml.j2  vars.yml.j2  verify.yml.j2
molecule/resources/roles/: requirements.yml
molecule/resources/tests/: test_default.py  test_default.py.j2
molecule/shared/: playbook.yml.j2  prepare.yml.j2  yamllint.yml.j2
molecule/tests/: test_default.py
molecule/tox/: molecule.yml.j2  requirements.yml.j2
molecule/vbox/: build.yml.j2  molecule.yml.j2  prepare.yml.j2
tasks/: main.yml.j2  tasks.yml.j2
templates/: template.conf.j2  template.conf.j2.j2
vars/: Alpine.yml.j2  Archlinux.yml.j2  Debian.yml.j2  RedHat.yml.j2  Suse.yml.j2  main.yml
